--- a/styles/colors.less
+++ b/styles/colors.less
@@ -3,8 +3,8 @@
 
 
 @dirtypurp-very-dark: #371049; //dirty dark purple for background
-@dirtypurp-dark: #372939; //dirty dark purple for comments
-@dirtypurp-mid-1: #702174; // Medium brown 1 (keywords)
+@dirtypurp-dark: #005e37; //dirty dark purple for comments
+@dirtypurp-mid-1: #fa0096; // Medium brown 1 (keywords)
 @dirtypurp-mid-2: #a458b4; // Medium brown 2 (base)
 @dirtygreen-1: #149e3f; // green like sprite bottle  (functions)
 @dirty-yellow-1: #faf236; //yellow like the sprite bottle
